# trueshell

./: CMakeLists.txt  README.md
src/: directory.hpp  input.hpp  main.cpp  process.hpp
